--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,10 +2,11 @@
   "name": "webapp",
   "version": "0.1.0",
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@inrupt/solid-ui-react": "^2.7.0",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.5",
+    "@mui/material": "^5.4.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -53,9 +55,9 @@
     "jest-cucumber": "^3.0.1",
     "jest-puppeteer": "^6.0.3",
     "puppeteer": "^13.0.1",
+    "react-scripts": "5.0.0",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^27.1.2",
-    "ts-node-dev": "^1.1.8",
-    "react-scripts": "5.0.0"
+    "ts-node-dev": "^1.1.8"
   }
 }
