--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
@@ -51,6 +52,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/puppeteer": "^5.4.4",
+    "@types/styled-components": "^5.1.24",
     "expect-puppeteer": "^6.0.2",
     "jest-cucumber": "^3.0.1",
     "jest-puppeteer": "^6.0.3",
