--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,10 +13,12 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "express": "^4.17.2",
+    "firebase": "^9.6.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
