--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
