--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,7 +16,9 @@
     "firebase": "^9.6.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
+    "redux": "^4.1.2",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
