--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
