--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "^17.0.11",
     "express": "^4.17.2",
     "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
