--- a/webapp/functions/package.json
+++ b/webapp/functions/package.json
@@ -13,12 +13,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@firebase/firestore": "^3.4.5",
+    "firebase": "^9.6.8",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.1"
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "typescript": "^4.5.4"
   },
   "private": true
 }
