--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@inrupt/solid-client": "^1.20.1",
     "@inrupt/solid-client-authn-browser": "^1.11.5",
     "@inrupt/vocab-common-rdf": "^1.0.3",
-    "@inrupt/solid-client": "^1.20.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@testing-library/jest-dom": "^5.16.1",
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "env": "^0.0.2",
     "express": "^4.17.2",
     "firebase": "^9.6.8",
     "firebase-admin": "^10.0.2",
