Getting address, locality and postal code from pod working

--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
+      - name: Change diretory to webapp
+        run: cd .\webapp\
       - name: Install Dependencies
         run: npm install
       - name: Build
