--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Change diretory to webapp
-        run: cd .\webapp\
+        run: cd webapp
       - name: Install Dependencies
         run: npm install
       - name: Build
