--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    working-directory: ./webapp
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
