--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -12,12 +12,14 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Change diretory to webapp
-        run: cd webapp
       - name: Install Dependencies
-        run: npm install
+        run: |
+          cd webapp
+          npm install
       - name: Build
-        run: npm run build
+        run: |
+          cd webapp
+          npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
