--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -1,4 +1,4 @@
-name: CI for ASW
+name: CI for ASW2122
 on:
   push:
     branches:
@@ -18,7 +18,7 @@ jobs:
       - name: Build
         run: |
           cd webapp
-          npm run build
+          CI=false npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
