--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -22,21 +22,23 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
-          name: dist
-          path: dist
+          name: path
+          path: webapp
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Download Artifact
         uses: actions/download-artifact@master
+      - name: Change to webapp
+        run: cd webapp
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          path: webapp
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
