--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -22,9 +22,9 @@ jobs:
           CI=false npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
-        with:
-          name: dist
-          path: dist
+        #with:
+          #name: dist
+          #path: dist
   deploy:
     defaults:
       run:
@@ -37,9 +37,9 @@ jobs:
         uses: actions/checkout@master
       - name: Download Artifact
         uses: actions/download-artifact@master
-        with:
-          name: dist
-          path: dist
+        #with:
+          #name: dist
+          #path: dist
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
