--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -21,10 +21,10 @@ jobs:
         run:
           CI=false npm run build
       - name: Archive Production Artifact
-        uses: actions/upload-artifact@master
-        #with:
-          #name: dist
-          #path: dist
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: dist
   deploy:
     defaults:
       run:
@@ -36,10 +36,10 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Download Artifact
-        uses: actions/download-artifact@master
-        #with:
-          #name: dist
-          #path: dist
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
