--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: webapp/build
-          path: webapp/build
+          name: build
+          path: build
   deploy:
     defaults:
       run:
@@ -35,11 +35,11 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Download Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: webapp/build/
-          path: build
+      #- name: Download Artifact
+        #uses: actions/download-artifact@v3
+        #with:
+          #name: build
+          #path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
