--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -20,11 +20,12 @@ jobs:
       - name: Build
         run:
           CI=false npm run build
+          ls -l
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: build
-          path: build
+          name: take-build-file
+          path: .
   deploy:
     defaults:
       run:
@@ -35,11 +36,11 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
-      #- name: Download Artifact
-        #uses: actions/download-artifact@v3
-        #with:
-          #name: build
-          #path: build
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: take-build-file
+          path: .
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
