--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -13,19 +13,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: Install Dependencies
         run:
           npm install
       - name: Build
         run:
           CI=false npm run build
-          ls -l
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v3
         with:
           name: take-build-file
-          path: .
+          path: build
   deploy:
     defaults:
       run:
@@ -35,12 +34,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: Download Artifact
         uses: actions/download-artifact@v3
         with:
           name: take-build-file
-          path: .
+          path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
