Change the path

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -18,7 +18,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "./webapp/dist/"
   },
   "include": [
     "src","e2e"
