--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -41,7 +41,7 @@ jobs:
           name: take-build-file
           path: ./webapp/build
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@v3
         with:
           args: deploy --only hosting
         env:
