--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Build
         run:
           CI=false npm run build
-      - name: Archive Production Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: take-build-file
-          path: ./webapp/public
+      #- name: Archive Production Artifact
+       # uses: actions/upload-artifact@v3
+        #with:
+         # name: take-build-file
+         # path: ./webapp/public
   deploy:
     defaults:
       run:
@@ -35,11 +35,13 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - name: Download Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: take-build-file
-          path: ./webapp/public
+
+      #- name: Download Artifact
+       # uses: actions/download-artifact@v3
+        #with:
+         # name: take-build-file
+          #path: ./webapp/public
+
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v2.0.0
         with:
