--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -21,10 +21,10 @@ jobs:
         run:
           CI=false npm run build
       - name: Archive Production Artifact
-       uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
-         name: take-build-file
-         path: ./webapp/build
+          name: take-build-file
+          path: ./webapp/build
   deploy:
     defaults:
       run:
@@ -35,17 +35,14 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-
-      -name: Download Artifact
-       uses: actions/download-artifact@v3
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
         with:
-         name: take-build-file
+          name: take-build-file
           path: ./webapp/build
-
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@v2.0.0
+        uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
