--- a/webapp/firebase.json
+++ b/webapp/firebase.json
@@ -4,7 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "webapp",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
