vete de una vez

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": ".\\webapp\\build\\",
+    "public": "webapp",
     "ignore": [
       "firebase.json",
       "**/.*",
