--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -1,8 +1,8 @@
 name: CI for ASW2122
 on:
-  push:
+  pull_request:
     branches:
-      - continuous_integration
+      - develop
 
 jobs:
   build:
