--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,10 @@
 {
   "hosting": {
-    "public": "webapp",
+    "public": "webapp/build",
     "ignore": [
       "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+      "/.*",
+      "/node_modules/**"
     ]
   }
 }
