--- a/webapp/firebase.json
+++ b/webapp/firebase.json
@@ -4,11 +4,17 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+      "/.*",
+      "/node_modules/"
+    ],
+    "rewrites": [
+      {
+        "source": "",
+        "destination": "/index.html"
+      }
     ]
   },
   "functions": {
