hotfix change firebase json

--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,16 @@
 {
   "hosting": {
-    "public": "webapp/build",
+    "public": "webapp",
     "ignore": [
       "firebase.json",
       "/.*",
       "/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "",
+        "destination": "/index.html"
+      }
     ]
   }
 }
