Standard function created to send email after an order is completed,

--- a/webapp/functions/package.json
+++ b/webapp/functions/package.json
@@ -14,9 +14,11 @@
   "main": "lib/index.js",
   "dependencies": {
     "@firebase/firestore": "^3.4.5",
+    "cors": "^2.8.5",
     "firebase": "^9.6.8",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.1",
+    "nodemailer": "^6.7.3",
     "nominatim-client": "^3.2.1",
     "nominatim-geocoder": "^0.1.4"
   },
