--- a/webapp/package.json
+++ b/webapp/package.json
@@ -65,6 +65,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/puppeteer": "^5.4.4",
+    "codecov": "^3.8.3",
     "expect-puppeteer": "^6.0.2",
     "jest-cucumber": "^3.0.1",
     "jest-puppeteer": "^6.0.3",
