First acceptance test and configuration

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -38,7 +38,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
-    "test:e2e": "start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 'cd e2e && jest'",
+    "test:e2e": "start-server-and-test 'npm start' http://localhost:3000 prod 3000 'cd e2e && jest '",
     "eject": "react-scripts eject",
     "prod": "ts-node-dev ./server.ts"
   },
@@ -66,10 +66,10 @@
     "@types/jest": "^27.4.0",
     "@types/puppeteer": "^5.4.4",
     "codecov": "^3.8.3",
-    "expect-puppeteer": "^6.0.2",
+    "expect-puppeteer": "^6.1.0",
     "jest-cucumber": "^3.0.1",
-    "jest-puppeteer": "^6.0.3",
-    "puppeteer": "^13.0.1",
+    "jest-puppeteer": "^6.1.0",
+    "puppeteer": "^13.6.0",
     "react-scripts": "^5.0.0",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^27.1.2",
