Changed deployment url hotfix

--- a/webapp/firebase.json
+++ b/webapp/firebase.json
@@ -8,12 +8,9 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "site": "dedeen3a",
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
