--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -11,6 +11,15 @@ jobs:
         working-directory: webapp
     name: Build
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_apiKey: ${{ secrets.REACT_APP_APIKEY }}
+      REACT_APP_authDomain: ${{ secrets.REACT_APP_AUTHDOMAIN }}
+      REACT_APP_databaseURL: ${{ secrets.REACT_APP_DATABASEURL }}
+      REACT_APP_projectId: ${{ secrets.REACT_APP_PROJECTID }}
+      REACT_APP_storageBucket: ${{ secrets.REACT_APP_STORAGEBUCKET }}
+      REACT_APP_messagingSenderId: ${{ secrets.REACT_APP_MESSAGINGSENDERID }}
+      REACT_APP_appId: ${{ secrets.REACT_APP_APPID }}
+      REACT_APP_paypalapi: ${{ secrets.REACT_APP_PAYPALAPI }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -32,6 +41,15 @@ jobs:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_apiKey: ${{ secrets.REACT_APP_APIKEY }}
+      REACT_APP_authDomain: ${{ secrets.REACT_APP_AUTHDOMAIN }}
+      REACT_APP_databaseURL: ${{ secrets.REACT_APP_DATABASEURL }}
+      REACT_APP_projectId: ${{ secrets.REACT_APP_PROJECTID }}
+      REACT_APP_storageBucket: ${{ secrets.REACT_APP_STORAGEBUCKET }}
+      REACT_APP_messagingSenderId: ${{ secrets.REACT_APP_MESSAGINGSENDERID }}
+      REACT_APP_appId: ${{ secrets.REACT_APP_APPID }}
+      REACT_APP_paypalapi: ${{ secrets.REACT_APP_PAYPALAPI }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
