--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -85,7 +85,8 @@ jobs:
       matrix:
         node-version: [ 12.x, 14.x, 16.x ]
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
