--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -1,7 +1,7 @@
 name: CI for ASW2122
 on:
-  pull_request:
-    branches: [develop]
+  push:
+    branches: [continuous_integration]
     types: [closed]
 
 jobs:
