--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,11 @@
 {
-  "functions": {
-    "source": "functions",
-    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
-  },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
   "hosting": {
-    "site": "dedeen3a",
-    "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "/.*",
+      "/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
