--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -36,6 +36,35 @@ jobs:
           name: take-build-file
           path: ./webapp/build
 
+  tests:
+    runs-on: ubuntu-latest
+    env:
+      REACT_APP_apiKey: ${{ secrets.REACT_APP_APIKEY }}
+      REACT_APP_authDomain: ${{ secrets.REACT_APP_AUTHDOMAIN }}
+      REACT_APP_databaseURL: ${{ secrets.REACT_APP_DATABASEURL }}
+      REACT_APP_projectId: ${{ secrets.REACT_APP_PROJECTID }}
+      REACT_APP_storageBucket: ${{ secrets.REACT_APP_STORAGEBUCKET }}
+      REACT_APP_messagingSenderId: ${{ secrets.REACT_APP_MESSAGINGSENDERID }}
+      REACT_APP_appId: ${{ secrets.REACT_APP_APPID }}
+      REACT_APP_paypalapi: ${{ secrets.REACT_APP_PAYPALAPI }}
+    defaults:
+      run:
+        working-directory: webapp
+    strategy:
+      matrix:
+        node-version: [ 12.x, 14.x, 16.x ]
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      run: npm run test:e2e
+      run: npm run build --if-present
+      run: npm test
+
   deploy:
     defaults:
       run:
@@ -66,4 +95,5 @@ jobs:
           args: deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }} --project dede-en3a-336f8
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+
 
