--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -61,9 +61,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      run: npm run test:e2e
-      run: npm run build --if-present
-      run: npm test
+        run:
+          npm run test:e2e
+          npm run build --if-present
+          npm test
 
   deploy:
     defaults:
