--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -63,10 +63,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - name: Run commands for tests
+      - name: Run tests e2e
         run:
           npm run test:e2e
-          npm run build --if-present
+      - name: Run tests
+        run:
           npm test
 
   deploy:
