--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Run tests e2e
         run:
           npm run test:e2e
-      - name: Run tests
+      - name: Run normal tests
         run:
           npm test
 
