Hotfix jest tests -> still not generating correct report

--- a/webapp/firebase.json
+++ b/webapp/firebase.json
@@ -10,7 +10,7 @@
   "hosting": {
     "site": "dedeen3a",
     "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": ["firebase.json", "/.*", "/node_modules/"],
     "rewrites": [
       {
         "source": "**",
