--- a/webapp/package.json
+++ b/webapp/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "uuidv4": "^6.2.13",
+    "victory": "^36.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
