CI for running tests 2

--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -39,6 +39,7 @@ jobs:
           path: ./webapp/build
 
   tests:
+    needs: [built]
     defaults:
       run:
         working-directory: webapp
