--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -71,7 +71,7 @@ jobs:
           #node-version: ${{ matrix.node-version }}
           node-version: 16
           cache: 'npm'
-      #- run: npm ci
+      - run: npm ci
       - run: npm test
       - run: npm run test:e2e
 
