--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -39,12 +39,12 @@ jobs:
           path: ./webapp/build
 
   tests:
+    name: Tests
+    runs-on: ubuntu-latest
     needs: [build]
     defaults:
       run:
         working-directory: webapp
-    name: Tests
-    runs-on: ubuntu-latest
     env:
       REACT_APP_apiKey: ${{ secrets.REACT_APP_APIKEY }}
       REACT_APP_authDomain: ${{ secrets.REACT_APP_AUTHDOMAIN }}
@@ -61,16 +61,22 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Download Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: take-build-file
-          path: /home/runner/work/dede_en3a/dede_en3a/webapp
+        #uses: actions/download-artifact@v3
+        #with:
+          #name: take-build-file
+          #path: /home/runner/work/dede_en3a/dede_en3a/webapp
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           #node-version: ${{ matrix.node-version }}
           node-version: 16
-          cache: 'npm'
+          #cache: 'npm'
+      - name: Install Dependencies
+        run:
+          npm install
+          - name: Build
+            run:
+              CI=false npm run build
       - run: npm ci
       - run: npm test
       - run: npm run test:e2e
