--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -71,10 +71,8 @@ jobs:
           #node-version: ${{ matrix.node-version }}
           node-version: 16
           #cache: 'npm'
-      - name: Install Dependencies
-        run: npm install
-      - name: Build
-        run: CI=false npm run build
+      - run: npm install
+      - run: CI=false npm run build
       - run: npm ci
       - run: npm test
       - run: npm run test:e2e
