--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -60,7 +60,7 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - name: Download Artifact
+      #- name: Download Artifact
         #uses: actions/download-artifact@v3
         #with:
           #name: take-build-file
