Pop ups with login and signup errors added

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test -- --coverage --watchAll=false",
+    "test": "react-scripts test --coverage",
     "test:e2e": "start-server-and-test prod 3000 'jest --rootDir=e2e --config=./e2e/jest.config.ts'",
     "eject": "react-scripts eject",
     "prod": "ts-node-dev ./server.ts"
