CI for running tests 10

--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -43,7 +43,7 @@ jobs:
           #cache: 'npm'
       - run: npm install
       - run: CI=false npm run build
-      - run: npm ci
+      #- run: npm ci
       - run: npm run test:e2e
       - run: npm test
 
