--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -76,7 +76,7 @@ jobs:
           #cache: 'npm'
       - run: npm install
       #- run: CI=false npm run build
-      #- run: npm ci
+      - run: npm ci
       - run: npm run test:e2e
       #- run: npm test
 
