CI for running tests (please work)

--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -78,7 +78,7 @@ jobs:
       #- run: CI=false npm run build
       - run: npm ci
       - run: npm run test:e2e
-      #- run: npm test
+      - run: npm test
 
   deploy:
     defaults:
