CI for running tests (I swear this time works)

--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -45,8 +45,7 @@ jobs:
       - run: CI=false npm run build
       #- run: npm ci
       - run: npm run test:e2e
-      - run: npm test
-      - run: q
+      - run: CI=true npm test
 
   deploy:
     defaults:
