CI for running tests (I swear this time works) (I don't know I am just loosing my hope)

--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -45,7 +45,7 @@ jobs:
       - run: CI=false npm run build
       #- run: npm ci
       - run: npm run test:e2e
-      - run: CI=true npm test
+      - run: npm test -- --whatchAll=false
 
   deploy:
     defaults:
