--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -45,7 +45,7 @@ jobs:
       - run: CI=false npm run build
       #- run: npm ci
       - run: npm run test:e2e
-      - run: npm test -- --whatchAll=false
+      - run: npm test -- --watchAll=false
 
   deploy:
     defaults:
