--- a/.github/workflows/deployFirebase.yml
+++ b/.github/workflows/deployFirebase.yml
@@ -32,11 +32,11 @@ jobs:
         uses: actions/checkout@v3
       - run: npm install
       - run: CI=false npm run build
-      - name: Download Artifact
-        uses: actions/download-artifact@v3
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@v3
         with:
           name: take-build-file
-          path: /home/runner/work/dede_en3a/dede_en3a/webapp
+          path: ./webapp/build
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
