Script created to create the infrastructure in both Windows and Linux OS. The scripts create the Docker image, then Terraform creates the infrastructure using that image.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ yarn-error.log*
 #documentation build does not go into master
 docs/build
 
+#extra things with terraform
+*.tfstate
+*.tfstate*
+.terraform*
+
